# pixlang

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GITHUB_ISSUES.md
examples/: batch_process.pxl  blend_modes.pxl  composite_overlay.plugins.py  composite_overlay.pxl  control_flow.pxl  document_preprocess.pxl  edge_detection.pxl  heatmap_annotation.pxl  include_demo.pxl  pipeline.pxl  pixlang.toml  preprocess.pxl  pyramid.pxl  roi_assert.pxl
pixlang/: __init__.py  cli.py
pixlang/batch/: __init__.py  engine.py
pixlang/commands/: __init__.py  builtin.py  registry.py
pixlang/config/: __init__.py  loader.py
pixlang/editor/: __init__.py  server.py
pixlang/editor/static/: index.html
pixlang/editor/static/css/: editor.css
pixlang/editor/static/js/: app.js  flowchart.js  panels.js  workspace.js
pixlang/executor/: __init__.py  engine.py
pixlang/linter/: __init__.py  engine.py
pixlang/parser/: __init__.py  ast_nodes.py  lexer.py  parser.py
pixlang/plugins/: __init__.py  loader.py
pixlang/watcher/: __init__.py  engine.py
plugins_example/pixlang_denoise/: __init__.py  plugin.py
scripts/: make_sample.py
tests/: test_editor.py  test_executor.py  test_parser.py  test_v2.py  test_v3.py  test_v4.py
